--- a/execution.yml
+++ b/execution.yml
@@ -16,5 +16,5 @@ scenarios:
       url: http://blazedemo.com/reverse.php
       body:
         fromPort: Paris
-        toPort: Buenos Aires
+        toPort: Buenos Aires Argen
    
